--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Minute to Hour converter - React.JS</title>
+	<meta name="viewport" content="width=device-width" />
+  <title>Minute to Hour converter - React.JS</title>
   <link rel="stylesheet" href="build/css/style.css" />
   <script type="text/javascript" src="bower_components/react/react.min.js"></script>
 </head>
